force-app/main/default/objects/ABHI_Case_Detail__c/fields/Concern__c.field-meta.xml
<CustomField>
    <fullName>Concern__c</fullName>
    <label>Concern</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cashless Claims Intimation</fullName>
            </value>
            <value>
                <fullName>OPD Claim Intimation</fullName>
            </value>
            <value>
                <fullName>Cashless anywhere Claim Intimation</fullName>
            </value>
            <value>
                <fullName>Claim intimation cancellation</fullName>
            </value>
            <value>
                <fullName>Income eligibility</fullName>
            </value>
            <value>
                <fullName>Occupation eligibility</fullName>
            </value>
            <value>
                <fullName>Portability beyond sourcing guidelines</fullName>
            </value>
            <value>
                <fullName>Tele UW request</fullName>
            </value>
            <value>
                <fullName>Addition of pre-existing disease</fullName>
            </value>
            <value>
                <fullName>Deletion of pre-existing disease</fullName>
            </value>
            <value>
                <fullName>Disclosure of Illness/Diseases</fullName>
            </value>
            <value>
                <fullName>Aadhar Number / PAN</fullName>
            </value>
            <value>
                <fullName>Bank account details</fullName>
            </value>
            <value>
                <fullName>Educational Qualification / Occupation details</fullName>
            </value>
            <value>
                <fullName>Update height and weight</fullName>
            </value>
            <value>
                <fullName>Marital Status change</fullName>
            </value>
            <value>
                <fullName>Relationship correction</fullName>
            </value>
            <value>
                <fullName>Name Correction</fullName>
            </value>
            <value>
                <fullName>DOB correction</fullName>
            </value>
            <value>
                <fullName>Gender correction</fullName>
            </value>
            <value>
                <fullName>Salutation</fullName>
            </value>
            <value>
                <fullName>GST Number / Portability details / EIA Number / Loan account number</fullName>
            </value>
            <value>
                <fullName>Addition of new born</fullName>
            </value>
            <value>
                <fullName>Addition of spouse/Member</fullName>
            </value>
            <value>
                <fullName>Communication address change</fullName>
            </value>
            <value>
                <fullName>International Address change</fullName>
            </value>
            <value>
                <fullName>Nominee modification</fullName>
            </value>
            <value>
                <fullName>Inquiry of Network Hospital</fullName>
            </value>
            <value>
                <fullName>Inquiry of diagnostic centre</fullName>
            </value>
            <value>
                <fullName>Inquiry of Blacklisted hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>