force-app/main/default/objects/ABHI_Case_Detail__c/fields/Concern_claims__c.field-meta.xml
<CustomField>
    <fullName>Concern_claims__c</fullName>
    <label>Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Documents required</fullName>
            </value>
            <value>
                <fullName>Approved / Paid deduction inquiry</fullName>
            </value>
            <value>
                <fullName>Claim document return</fullName>
            </value>
            <value>
                <fullName>Claim intimation cancellation</fullName>
            </value>
            <value>
                <fullName>Fresh claim documents received</fullName>
            </value>
            <value>
                <fullName>Irrelevant Query ( Manual Mapping)</fullName>
            </value>
            <value>
                <fullName>Query related inquiry</fullName>
            </value>
            <value>
                <fullName>Reconsider /Reopen</fullName>
            </value>
            <value>
                <fullName>Reimbursement claim rejection</fullName>
            </value>
            <value>
                <fullName>Reimbursement intimation</fullName>
            </value>
            <value>
                <fullName>Reimbursement process</fullName>
            </value>
            <value>
                <fullName>Reimbursement process inquiry</fullName>
            </value>
            <value>
                <fullName>Reimbursement status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>