force-app/main/default/objects/ABHI_Case_Detail__c/fields/Confirm_Account_number__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Account_number__c</fullName>
    <label>Confirm Account number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>