force-app/main/default/objects/ABHI_Case_Detail__c/fields/Contest_Concern__c.field-meta.xml
<CustomField>
    <fullName>Contest_Concern__c</fullName>
    <label>Contest Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Winners details</fullName>
            </value>
            <value>
                <fullName>Gift/voucher not received yet</fullName>
            </value>
            <value>
                <fullName>Voucher received however already been redeemed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>