force-app/main/default/objects/ABHI_Case_Detail__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Permanent Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>