force-app/main/default/objects/ABHI_Case_Detail__c/fields/Cover_Name__c.field-meta.xml
<CustomField>
    <fullName>Cover_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cover Name</label>
    <referenceTo>Cover__c</referenceTo>
    <relationshipLabel>ABHI Case Details</relationshipLabel>
    <relationshipName>ABHI_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>