force-app/main/default/objects/ABHI_Case_Detail__c/fields/CPGrams_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>CPGrams_Complaint_Number__c</fullName>
    <label>CPGrams Complaint Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>