force-app/main/default/objects/ABHI_Case_Detail__c/fields/Credit_card_last_4_digit__c.field-meta.xml
<CustomField>
    <fullName>Credit_card_last_4_digit__c</fullName>
    <label>Credit card last 4 digit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>