force-app/main/default/objects/ABHI_Case_Detail__c/fields/Current_International_address__c.field-meta.xml
<CustomField>
    <fullName>Current_International_address__c</fullName>
    <label>Current International address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>