force-app/main/default/objects/ABHI_Case_Detail__c/fields/Current_status__c.field-meta.xml
<CustomField>
    <fullName>Current_status__c</fullName>
    <label>Current status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under medication</fullName>
            </value>
            <value>
                <fullName>Completely cured</fullName>
            </value>
            <value>
                <fullName>Untreated</fullName>
            </value>
            <value>
                <fullName>Planned for surgery</fullName>
            </value>
            <value>
                <fullName>Unaware/Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>