force-app/main/default/objects/ABHI_Case_Detail__c/fields/Customer_did_troubleshooting_steps__c.field-meta.xml
<CustomField>
    <fullName>Customer_did_troubleshooting_steps__c</fullName>
    <label>Customer did troubleshooting steps ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>