force-app/main/default/objects/ABHI_Case_Detail__c/fields/Data_Information_1__c.field-meta.xml
<CustomField>
    <fullName>Data_Information_1__c</fullName>
    <label>Data Information 1</label>
    <type>TextArea</type>
</CustomField>