force-app/main/default/objects/ABHI_Case_Detail__c/fields/Date_of_diagnosis_duration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_diagnosis_duration__c</fullName>
    <label>Date of diagnosis/duration</label>
    <type>Date</type>
</CustomField>