force-app/main/default/objects/ABHI_Case_Detail__c/fields/Date_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Discharge__c</fullName>
    <label>Date of Discharge</label>
    <type>DateTime</type>
</CustomField>