force-app/main/default/objects/ABHI_Case_Detail__c/fields/Date_of_Honoring_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Honoring_Service__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>Date of Honoring Service</label>
    <type>Date</type>
</CustomField>