force-app/main/default/objects/ABHI_Case_Detail__c/fields/Date_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_payment__c</fullName>
    <label>Date of payment</label>
    <type>Date</type>
</CustomField>