force-app/main/default/objects/ABHI_Case_Detail__c/fields/Dependent_Department__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Department__c</fullName>
    <label>Dependent Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Ops- New business</fullName>
            </value>
            <value>
                <fullName>Ops- Renewals</fullName>
            </value>
            <value>
                <fullName>Ops- Cancellation and Refund</fullName>
            </value>
            <value>
                <fullName>Ops- Finops</fullName>
            </value>
            <value>
                <fullName>BFL Ops</fullName>
            </value>
            <value>
                <fullName>Wellness Team</fullName>
            </value>
            <value>
                <fullName>App Team</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>