force-app/main/default/objects/ABHI_Case_Detail__c/fields/DHA_scan_related_concern__c.field-meta.xml
<CustomField>
    <fullName>DHA_scan_related_concern__c</fullName>
    <label>DHA scan related concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Link is not working</fullName>
            </value>
            <value>
                <fullName>Unable to do face scan</fullName>
            </value>
            <value>
                <fullName>Unable to submit the questionnaire</fullName>
            </value>
            <value>
                <fullName>While processing for DHA, auto populated message stating &quot;eligible for health assessment&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>