force-app/main/default/objects/ABHI_Case_Detail__c/fields/Diagnostic_Centre_Concern__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Centre_Concern__c</fullName>
    <label>Diagnostic Centre Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnostic Name</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>