force-app/main/default/objects/ABHI_Case_Detail__c/fields/Diagnostic_Concern__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Concern__c</fullName>
    <label>Diagnostic Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnostic Center</fullName>
            </value>
            <value>
                <fullName>GYM or Fitness Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>