force-app/main/default/objects/ABHI_Case_Detail__c/fields/Digital_Concern__c.field-meta.xml
<CustomField>
    <fullName>Digital_Concern__c</fullName>
    <label>Digital Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email mobile already exists</fullName>
            </value>
            <value>
                <fullName>Group user&apos;s error</fullName>
            </value>
            <value>
                <fullName>Technical error while registering</fullName>
            </value>
            <value>
                <fullName>unable to login(Password Error)</fullName>
            </value>
            <value>
                <fullName>unable to login(Member ID error)</fullName>
            </value>
            <value>
                <fullName>unable to login(OTP Error)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>