force-app/main/default/objects/ABHI_Case_Detail__c/fields/Disclosure_of_Illness__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_of_Illness__c</fullName>
    <label>Disclosure of Illness</label>
    <length>100</length>
    <type>Text</type>
</CustomField>