force-app/main/default/objects/ABHI_Case_Detail__c/fields/District_Town__c.field-meta.xml
<CustomField>
    <fullName>District_Town__c</fullName>
    <label>District/Town</label>
    <length>20</length>
    <type>Text</type>
</CustomField>