force-app/main/default/objects/ABHI_Case_Detail__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy soft-copy required</fullName>
            </value>
            <value>
                <fullName>Tax receipt required</fullName>
            </value>
            <value>
                <fullName>Health card required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>