force-app/main/default/objects/ABHI_Case_Detail__c/fields/DRM_Medical_check_up_Concern__c.field-meta.xml
<CustomField>
    <fullName>DRM_Medical_check_up_Concern__c</fullName>
    <label>DRM - Medical check-up Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule OPD Test</fullName>
            </value>
            <value>
                <fullName>Cancel OPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>