force-app/main/default/objects/ABHI_Case_Detail__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Date</type>
</CustomField>