force-app/main/default/objects/ABHI_Case_Detail__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Matric</fullName>
            </value>
            <value>
                <fullName>Below Matric</fullName>
            </value>
            <value>
                <fullName>Professional Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>