force-app/main/default/objects/ABHI_Case_Detail__c/fields/EIA_Number__c.field-meta.xml
<CustomField>
    <fullName>EIA_Number__c</fullName>
    <label>EIA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>