force-app/main/default/objects/ABHI_Case_Detail__c/fields/Email_ID_registered_with_bank_account__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_registered_with_bank_account__c</fullName>
    <label>Email ID registered with bank account</label>
    <type>Email</type>
</CustomField>