force-app/main/default/objects/ABHI_Case_Detail__c/fields/Empanelment_Concern__c.field-meta.xml
<CustomField>
    <fullName>Empanelment_Concern__c</fullName>
    <label>Empanelment Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counter offer Accepted</fullName>
            </value>
            <value>
                <fullName>Reconsider the counter offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>