force-app/main/default/objects/ABHI_Case_Detail__c/fields/Error_type__c.field-meta.xml
<CustomField>
    <fullName>Error_type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email mobile already exists</fullName>
            </value>
            <value>
                <fullName>Group user &apos;s error</fullName>
            </value>
            <value>
                <fullName>Technical error while registering</fullName>
            </value>
            <value>
                <fullName>Unable to login(Email ID blank Error)</fullName>
            </value>
            <value>
                <fullName>Unable to login(Password Error)</fullName>
            </value>
            <value>
                <fullName>Unable to login (One ABC error)</fullName>
            </value>
            <value>
                <fullName>Unable to login(Member ID error)</fullName>
            </value>
            <value>
                <fullName>Unable to login(OTP Error)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>