force-app/main/default/objects/ABHI_Case_Detail__c/fields/Escalated_Remark__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Remark__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Escalated Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>