force-app/main/default/objects/ABHI_Case_Detail__c/fields/Exception_Done__c.field-meta.xml
<CustomField>
    <fullName>Exception_Done__c</fullName>
    <label>Exception Done?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>