force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Alternate_Email_Id_Member__c.field-meta.xml
<CustomField>
    <fullName>Existing_Alternate_Email_Id_Member__c</fullName>
    <label>Existing Alternate Email Id - Member</label>
    <type>Email</type>
</CustomField>