force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Alternate_Number_member__c.field-meta.xml
<CustomField>
    <fullName>Existing_Alternate_Number_member__c</fullName>
    <label>Existing Alternate Number - member</label>
    <length>10</length>
    <type>Text</type>
</CustomField>