force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_DOB__c.field-meta.xml
<CustomField>
    <fullName>Existing_DOB__c</fullName>
    <label>Existing DOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>