force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Existing_Email_Id__c</fullName>
    <label>Existing Email Id</label>
    <type>Email</type>
</CustomField>