force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Email_ID_Member__c.field-meta.xml
<CustomField>
    <fullName>Existing_Email_ID_Member__c</fullName>
    <label>Existing Email ID Member</label>
    <type>Email</type>
</CustomField>