force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_First_Name__c</fullName>
    <label>Existing First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>