force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Gender__c.field-meta.xml
<CustomField>
    <fullName>Existing_Gender__c</fullName>
    <label>Existing Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>