force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Nominee_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Nominee_Contact_Number__c</fullName>
    <label>Existing Nominee Contact Number</label>
    <type>Phone</type>
</CustomField>