force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Nominee_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Nominee_Name__c</fullName>
    <label>Existing Nominee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>