force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Nominee_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Existing_Nominee_Relationship__c</fullName>
    <label>Existing Nominee Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>