force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Pan_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Pan_Card_Number__c</fullName>
    <label>Existing Pan Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>