force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Primary_Number__c</fullName>
    <label>Existing Primary Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>