force-app/main/default/objects/ABHI_Case_Detail__c/fields/Existing_Primary_Number_Member__c.field-meta.xml
<CustomField>
    <fullName>Existing_Primary_Number_Member__c</fullName>
    <label>Existing Primary Number - Member</label>
    <length>100</length>
    <type>Text</type>
</CustomField>