force-app/main/default/objects/ABHI_Case_Detail__c/fields/Expected_Cost_of_Hospitalization__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost_of_Hospitalization__c</fullName>
    <label>Expected Cost of Hospitalization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>