force-app/main/default/objects/ABHI_Case_Detail__c/fields/Expected_length_of_stay__c.field-meta.xml
<CustomField>
    <fullName>Expected_length_of_stay__c</fullName>
    <label>Expected length of stay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>