force-app/main/default/objects/ABHI_Case_Detail__c/fields/Final_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution_Date__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>Final Resolution Date/Time</label>
    <type>DateTime</type>
</CustomField>