force-app/main/default/objects/ABHI_Case_Detail__c/fields/Final_Resolution_Remark__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution_Remark__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Final Resolution Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>