force-app/main/default/objects/ABHI_Case_Detail__c/fields/Financial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Financial_Reason__c</fullName>
    <label>Financial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income eligibility</fullName>
            </value>
            <value>
                <fullName>Occupation eligibility</fullName>
            </value>
            <value>
                <fullName>Portability beyond sourcing guidelines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>