force-app/main/default/objects/ABHI_Case_Detail__c/fields/First_Resolution_Date_time__c.field-meta.xml
<CustomField>
    <fullName>First_Resolution_Date_time__c</fullName>
    <label>First Resolution Date/time</label>
    <type>DateTime</type>
</CustomField>