force-app/main/default/objects/ABHI_Case_Detail__c/fields/GST_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Registration_Type__c</fullName>
    <label>GST Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Compounding Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>