force-app/main/default/objects/ABHI_Case_Detail__c/fields/Health_Assessment_Concern__c.field-meta.xml
<CustomField>
    <fullName>Health_Assessment_Concern__c</fullName>
    <label>Health Assessment Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule HA</fullName>
            </value>
            <value>
                <fullName>Reschedule HA</fullName>
            </value>
            <value>
                <fullName>Cancel HA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>