force-app/main/default/objects/ABHI_Case_Detail__c/fields/Health_Coaching_Concern__c.field-meta.xml
<CustomField>
    <fullName>Health_Coaching_Concern__c</fullName>
    <label>Health Coaching Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule Health Coaching Appointment</fullName>
            </value>
            <value>
                <fullName>Cancel Health Coaching Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>