force-app/main/default/objects/ABHI_Case_Detail__c/fields/Health_Returns_Concern__c.field-meta.xml
<CustomField>
    <fullName>Health_Returns_Concern__c</fullName>
    <label>Health Returns Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wellbeing Score not generated</fullName>
            </value>
            <value>
                <fullName>Wellbeing Score reflecting incorrect</fullName>
            </value>
            <value>
                <fullName>Wellbeing score is reflecting blank</fullName>
            </value>
            <value>
                <fullName>Other Wellbeing Score Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>