force-app/main/default/objects/ABHI_Case_Detail__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Health_Provider__c</referenceTo>
    <relationshipLabel>ABHI Case Details</relationshipLabel>
    <relationshipName>ABHI_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>