force-app/main/default/objects/ABHI_Case_Detail__c/fields/Hospital_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Contact_Details__c</fullName>
    <label>Hospital Contact Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>