force-app/main/default/objects/ABHI_Case_Detail__c/fields/House_no_Building_no__c.field-meta.xml
<CustomField>
    <fullName>House_no_Building_no__c</fullName>
    <label>House no./Building no.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>