force-app/main/default/objects/ABHI_Case_Detail__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>