force-app/main/default/objects/ABHI_Case_Detail__c/fields/IGMS_Branch__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Branch__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>IGMS Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>